[package]
name = "semestral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
llvm-sys-150 = { package = "llvm-sys", version = "150.1.1", features = [ "prefer-dynamic" ] }